--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -1,15 +1,45 @@
-*{
+@use "./breakpoints.scss" as breakpoints;
+* {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 }
 
-body{
+body {
   background-color: #212121;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-a{
+a {
   text-decoration: none;
   color: inherit;
+}
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+@include breakpoints.xs{
+  ::-webkit-scrollbar {
+    width: 6px;
+  }
+
+}
+@include breakpoints.xxs{
+  ::-webkit-scrollbar {
+    width: 4px;
+  }
+
+}
+::-webkit-scrollbar-track {
+  background: #333333;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888888;
+  border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555555;
 }
