--- a/client/src/assets/styles/layouts/layout.module.scss
+++ b/client/src/assets/styles/layouts/layout.module.scss
@@ -2,27 +2,43 @@
 @use "../breakpoints.scss" as breakpoints;
 
 .rootLayout {
-  padding: 16px 46px;
-  padding-bottom: 46px;
+
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  header {
+  .navBar_dashboard {
     display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding-bottom: 16px;
-    z-index: 100;
-    .logo_cont {
+    header {
+      flex: 1;
       display: flex;
-      align-items: center;
-      font-weight: bold;
-      gap: 8px;
-      font-size: 24px;
-      color: $font-white;
-      .logo {
-        height: 32px;
-        width: 32px;
+      align-items: start;
+      justify-content: space-between;
+      z-index: 100;
+      padding: 16px 46px;
+      height: fit-content;
+      @include breakpoints.md {
+        padding: 16px 36px;
+      }
+      @include breakpoints.sm {
+        padding: 16px 28px;
+      }
+      @include breakpoints.xs {
+        padding: 16px 21px;
+      }
+      @include breakpoints.xxs {
+        padding: 16px;
+      }
+      .logo_cont {
+        display: flex;
+        align-items: center;
+        font-weight: bold;
+        gap: 8px;
+        font-size: 24px;
+        color: $font-white;
+        .logo {
+          height: 32px;
+          width: 32px;
+        }
       }
     }
   }
@@ -30,29 +46,5 @@
   main {
     height: 100%;
     flex: 1;
-  }
-}
-@include breakpoints.md {
-  .rootLayout {
-    padding: 16px 36px;
-    padding-bottom: 36px;
-  }
-}
-@include breakpoints.sm {
-  .rootLayout {
-    padding: 16px 28px;
-    padding-bottom: 48px;
-  }
-}
-@include breakpoints.xs {
-  .rootLayout {
-    padding: 16px 20px;
-    padding-bottom: 48px;
-  }
-}
-@include breakpoints.xxs {
-  .rootLayout {
-    padding: 16px;
-    padding-bottom: 48px;
   }
 }
