--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,7 +1,9 @@
-
-$white:#ffffff;
-$font-white:#ececec;
-$grey:#A6B4B4;
-$font-grey:#bebebe;
-$dark-grey:#2f2f2f;
-$mid-grey:#353535;
+$white: #ffffff;
+$font-white: #ececec;
+$grey: #a6b4b4;
+$white-grey: #9b9b9b;
+$mid-white-grey: #424242;
+$mid-grey: #353535;
+$mid-dark-grey: #2f2f2f;
+$dark-grey: #171717;
+$font-grey: #bebebe;
