--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
 $font-white: #ececec;
-$grey: #a6b4b4;
+$grey: #b4b4b4;
 $white-grey: #9b9b9b;
 $mid-white-grey: #424242;
 $mid-grey: #353535;
