--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -4,7 +4,7 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  scrollbar-color: $mid-white-grey;
+  scrollbar-color: $mid-white-grey transparent;
 }
 
 body {
