--- a/client/src/assets/styles/layouts/dashboardLayout.module.scss
+++ b/client/src/assets/styles/layouts/dashboardLayout.module.scss
@@ -1,15 +1,22 @@
-.dashboardLayout{
+@use "../variables.scss" as *;
+.dashboardLayout {
   display: flex;
-  gap: 50px;
-  padding-top: 20px;
-  height: 100%;
-  overflow-y: hidden;
-  .menu{
-    flex: 1;
+  flex-direction: column;
+  flex-grow: 1;
+  overflow: hidden;
+  .content {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-grow: 1;
+    flex-direction: column;
   }
-
-  .content{
-    flex: 4;
-
+  .details{
+    display: flex;
+    justify-content: center;
+    height: fit-content;
+    padding: 8px 60px;
+    font-size: 12px;
+    color: $grey;
   }
 }
