--- a/client/src/assets/styles/layouts/layout.module.scss
+++ b/client/src/assets/styles/layouts/layout.module.scss
@@ -2,32 +2,18 @@
 @use "../breakpoints.scss" as breakpoints;
 
 .rootLayout {
-
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   .navBar_dashboard {
     display: flex;
     header {
-      flex: 1;
       display: flex;
       align-items: start;
       justify-content: space-between;
       z-index: 100;
-      padding: 16px 46px;
-      height: fit-content;
-      @include breakpoints.md {
-        padding: 16px 36px;
-      }
-      @include breakpoints.sm {
-        padding: 16px 28px;
-      }
-      @include breakpoints.xs {
-        padding: 16px 21px;
-      }
-      @include breakpoints.xxs {
-        padding: 16px;
-      }
+      height:64px;
+
       .logo_cont {
         display: flex;
         align-items: center;
@@ -40,11 +26,59 @@
           width: 32px;
         }
       }
+      .header_left {
+        display: flex;
+        .buttons {
+          display: flex;
+          button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: $grey;
+            background-color: transparent;
+            border: none;
+            cursor: pointer;
+            border-radius: 8px;
+            transition: background 100ms;
+            padding: 8px;
+            &:hover {
+              background-color: #2f2f2f;
+            }
+            svg {
+              height: 24px;
+              width: 24px;
+            }
+          }
+        }
+        .dashboard_logo {
+          
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          font-size: 18px;
+          color: $grey;
+          font-weight: 600;
+          padding: 6px 12px;
+          border-radius: 8px;
+          transition: background 100ms;
+          &:hover {
+            background-color: #2f2f2f;
+          }
+        }
+      }
+      .user {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100%;
+      }
     }
   }
 
   main {
-    height: 100%;
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
     flex: 1;
   }
 }
