--- a/client/src/assets/styles/layouts/dashboardLayout.module.scss
+++ b/client/src/assets/styles/layouts/dashboardLayout.module.scss
@@ -1,9 +1,14 @@
 @use "../variables.scss" as *;
+@use "../breakpoints.scss" as breakpoints;
 .dashboardLayout {
   display: flex;
   flex-direction: column;
   flex-grow: 1;
   overflow: hidden;
+  padding: 0 20px;
+  @include breakpoints.smm {
+    padding: 0 12px;
+  }
   .content {
     display: flex;
     flex-direction: column;
@@ -11,11 +16,11 @@
     flex-grow: 1;
     flex-direction: column;
   }
-  .details{
+  .details {
     display: flex;
     justify-content: center;
     height: fit-content;
-    padding: 8px 60px;
+    padding: 8px;
     font-size: 12px;
     color: $grey;
   }
