--- a/client/src/assets/styles/pages/dashboardpage.module.scss
+++ b/client/src/assets/styles/pages/dashboardpage.module.scss
@@ -1,3 +1,11 @@
 .dashboard{
-
+  height: 100%;
+  width: 100%;
+  .empty_cont{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    width: 100%;
+  }
 }
