--- a/client/src/assets/styles/layouts/dashboardLayout.module.scss
+++ b/client/src/assets/styles/layouts/dashboardLayout.module.scss
@@ -14,6 +14,7 @@
     flex-direction: column;
     align-items: center;
     flex-grow: 1;
+    overflow-y: auto;
     flex-direction: column;
   }
   .details {
