--- a/client/src/assets/styles/pages/dashboardpage.module.scss
+++ b/client/src/assets/styles/pages/dashboardpage.module.scss
@@ -1,11 +1,65 @@
-.dashboard{
+@use "../variables.scss" as *;
+.dashboard {
   height: 100%;
   width: 100%;
-  .empty_cont{
+
+  .empty_cont {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100%;
     width: 100%;
+    .logo {
+      height: 48px;
+      width: 48px;
+      color: $font-white;
+    }
+    .chatsDirection {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-wrap: wrap;
+      width: fit-content;
+      gap: 16px;
+      padding: 48px 12px 0 12px;
+      .row {
+        display: flex;
+        gap: 16px;
+        .chat {
+          transition: background 200ms;
+          gap: 0.5rem;
+          background-color: transparent;
+          cursor: pointer;
+          width: 160px;
+          height: 124px;
+          padding: 12px 12px 16px 12px;
+          display: flex;
+          flex-direction: column;
+          border-radius: 16px;
+          border: 1px solid $mid-white-grey;
+          header {
+            display: flex;
+            width: 100%;
+            justify-content: flex-start;
+            height: fit-content;
+            svg {
+              height: 18px;
+              width: 18px;
+            }
+          }
+          .text {
+            display: flex;
+            text-align: left;
+            font-size: 15px;
+            line-height: 22.5px;
+            color: $white-grey;
+          }
+          &:hover{
+            background-color: $mid-dark-grey;
+          }
+        }
+      }
+    }
   }
 }
