--- a/client/src/assets/styles/layouts/dashboardLayout.module.scss
+++ b/client/src/assets/styles/layouts/dashboardLayout.module.scss
@@ -3,18 +3,12 @@
 .dashboardLayout {
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
+  height: 100vh;
   overflow: hidden;
-  padding: 0 20px;
-  @include breakpoints.smm {
-    padding: 0 12px;
-  }
   .content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-grow: 1;
     overflow-y: auto;
+    flex-grow: 1;
+    display: flex;
     flex-direction: column;
   }
   .details {
