--- a/client/src/assets/styles/variables.scss
+++ b/client/src/assets/styles/variables.scss
@@ -1,9 +1,10 @@
 $white: #ffffff;
 $font-white: #ececec;
+$font-grey: #bebebe;
 $grey: #b4b4b4;
 $white-grey: #9b9b9b;
 $mid-white-grey: #424242;
 $mid-grey: #353535;
 $mid-dark-grey: #2f2f2f;
 $dark-grey: #171717;
-$font-grey: #bebebe;
+$black: #0d0d0d;
