--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -37,3 +37,18 @@ a {
     background-color: #212121;
   }
 }
+
+.loader {
+  width: 40px;
+  height: 40px;
+  aspect-ratio: 1;
+  border-radius: 50%;
+  background: 
+    radial-gradient(farthest-side,$white 94%,#0000) top/8px 8px no-repeat,
+    conic-gradient(#0000 30%,$white);
+  -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  animation: l13 1s infinite linear;
+}
+@keyframes l13{ 
+  100%{transform: rotate(1turn)}
+}
