--- a/client/src/assets/styles/index.scss
+++ b/client/src/assets/styles/index.scss
@@ -43,12 +43,34 @@ a {
   height: 40px;
   aspect-ratio: 1;
   border-radius: 50%;
-  background: 
-    radial-gradient(farthest-side,$white 94%,#0000) top/8px 8px no-repeat,
-    conic-gradient(#0000 30%,$white);
-  -webkit-mask: radial-gradient(farthest-side,#0000 calc(100% - 8px),#000 0);
+  background: radial-gradient(farthest-side, $white 94%, #0000) top/8px 8px
+      no-repeat,
+    conic-gradient(#0000 30%, $white);
+  -webkit-mask: radial-gradient(farthest-side, #0000 calc(100% - 8px), #000 0);
   animation: l13 1s infinite linear;
 }
-@keyframes l13{ 
-  100%{transform: rotate(1turn)}
+@keyframes l13 {
+  100% {
+    transform: rotate(1turn);
+  }
+}
+
+.loader2 {
+  width: 10px;
+  aspect-ratio: 1;
+  border-radius: 999px;
+  background: $white;
+  box-shadow: 0 0 0 0 #ffffff;
+  animation: l1 1s infinite;
+}
+@keyframes l1 {
+  0% {
+    box-shadow: 0 0 0 0 #ffffff;
+  }
+  50% {
+    box-shadow: 0 0 2px 2.5px #ffffff;
+  }
+  0% {
+    box-shadow: 0 0 0 0 #ffffff;
+  }
 }
