--- a/client/src/assets/styles/layouts/layout.module.scss
+++ b/client/src/assets/styles/layouts/layout.module.scss
@@ -51,7 +51,7 @@
           }
         }
         .dashboard_logo {
-          
+          height: 40px;
           display: flex;
           align-items: center;
           justify-content: center;
