--- a/client/src/assets/styles/pages/chatpage.module.scss
+++ b/client/src/assets/styles/pages/chatpage.module.scss
@@ -4,7 +4,24 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  .AIIcon {
+    height: 100%;
+    width: 2rem;
+    .logo {
+      margin-top: 8px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 999px;
+      border: 1.5px solid $mid-white-grey;
+      width: 2rem;
+      height: 2rem;
+      padding: 0.35rem;
+      color: $font-white;
+    }
+  }
   .chat {
+    position: relative;
     display: flex;
     flex-direction: column;
     max-width: 48rem;
@@ -24,15 +41,6 @@
           flex-direction: column;
           align-items: flex-start;
           line-height: 24px;
-          p {
-            width: 100%;
-            display: flex;
-            margin: 8px 0;
-            word-break: break-word; /* Ensures long words break and wrap */
-            flex-wrap: wrap;
-            overflow-wrap: break-word; /* Ensures that text within the paragraph wraps properly */
-            white-space: normal; 
-          }
           ol,
           ul {
             margin-bottom: 1.25rem;
@@ -41,25 +49,72 @@
               padding-left: 6px;
             }
           }
-          pre {
-            white-space: pre-wrap;
+          h2 {
+            margin-bottom: 1rem;
+            margin-top: 2rem;
           }
-          
-        }
-        .AIIcon {
-          height: 100%;
-          width: 2rem;
-          .logo {
+          h3 {
+            margin: 16px 0 8px 0;
+          }
+          p {
             display: flex;
             align-items: center;
-            justify-content: center;
-            border-radius: 999px;
-            border: 1.5px solid $mid-white-grey;
-            width: 2rem;
-            height: 2rem;
-            padding: 0.35rem;
+            width: 100%;
+            margin: 8px 0;
+            word-break: break-word;
+            flex-wrap: wrap;
+            overflow-wrap: break-word;
+            white-space: normal;
+            line-height: 1.75rem;
+            code {
+              height: 100%;
+              vertical-align: baseline;
+              line-height: normal;
+              border-radius: 0.25rem;
+              font-size: 0.875em;
+              font-weight: 500;
+              padding: 0.15rem 0.3rem;
+              background-color: $mid-white-grey;
+              color: $font-white;
+              font-weight: 500;
+              height: fit-content;
+              margin: 0 5px;
+            }
+          }
+          pre {
+            display: inline-block;
+            width: 100%;
+            white-space: pre-wrap;
+            background-color: $black;
+
+            border-radius: 0.375rem;
+            border: solid 0.5px $mid-dark-grey;
+
+            .pre_header {
+              background-color: $mid-dark-grey;
+              padding: 8px 16px;
+              border-top-left-radius: 0.375rem;
+              border-top-right-radius: 0.375rem;
+            }
+
+            pre {
+              border: none;
+              overflow-x: auto;
+              white-space: pre-wrap;
+              display: inline-block;
+              code {
+                background-color: transparent;
+                padding: 1rem;
+                gap: 2px;
+
+                span {
+                  white-space: pre-wrap;
+                }
+              }
+            }
           }
         }
+      
         &.user {
           padding: 10px 20px;
           max-width: 70%;
@@ -67,9 +122,50 @@
           background-color: $mid-dark-grey;
           width: fit-content;
           margin-left: auto;
-          word-break: break-word; 
+          word-break: break-word;
+        }
+      }
+    }
+    .arrow_down {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      width: 32px;
+      aspect-ratio: 1/1;
+      border-radius: 999px;
+      background-color: #212121;
+      border: 0.5px solid hsla(0, 0%, 100%, 0.05);
+      position: sticky;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 20px;
+      cursor: pointer;
+      svg {
+        height: 18px;
+        width: 18px;
+        color: $font-white;
+      }
+    }
+    .loading_response{
+      display: flex;
+      padding: 18px 20px;
+      gap: 1.25rem;
+      .logo{
+        margin-top: 0;
+      }
+      .loader{
+        display: flex;
+        align-items: center;
+        width: 100%;
+        svg{
+          height: 10px;
+          width: 10px;
         }
       }
     }
   }
 }
+
+
+
