--- a/client/src/assets/styles/pages/chatpage.module.scss
+++ b/client/src/assets/styles/pages/chatpage.module.scss
@@ -1,4 +1,5 @@
 @use "../variables.scss" as *;
+@use "../breakpoints.scss" as breakpoints;
 .chatPage {
   display: flex;
   flex-direction: column;
@@ -28,10 +29,37 @@
     width: 100%;
     padding-bottom: 2.25rem;
     .wrapper {
+      display: flex;
+      flex-direction: column;
+      gap: 0.25rem;
       max-width: 48rem;
       width: 100%;
       padding: 18px 20px;
+      .img_wrapper {
+        display: flex;
+        justify-content: flex-end;
+        width: 100%;
+        .img_cont {
+          display: flex;
+          justify-content: flex-end;
+          width: 70%;
+          img {
+            max-width: 24rem;
+            max-height: 24rem;
 
+            object-fit: cover;
+            aspect-ratio: auto;
+            border-radius: 0.5rem;
+            flex-shrink: 1;
+            object-position: center;
+            overflow: hidden;
+            @include breakpoints.smm {
+              max-width: 20rem;
+              max-height: 20rem;
+            }
+          }
+        }
+      }
       .message {
         display: flex;
         color: $font-white;
@@ -89,12 +117,47 @@
 
             border-radius: 0.375rem;
             border: solid 0.5px $mid-dark-grey;
-
+            position: relative;
             .pre_header {
+              display: flex;
+              width: 100%;
+              justify-content: space-between;
+              align-items: center;
               background-color: $mid-dark-grey;
               padding: 8px 16px;
               border-top-left-radius: 0.375rem;
               border-top-right-radius: 0.375rem;
+              color: $grey;
+              .sticky_button_wrapper {
+                position: absolute;
+                top: 0;
+                right: 16px;
+                z-index: 5;
+                height: 100%;
+                padding: 8px  0;
+                .sticky_button_cont {
+                  position: sticky;
+                  top: 6px;
+                  background-color: $mid-dark-grey;
+                  border-radius: 0.25rem;
+                  padding: 0.25rem 0.5rem;
+                  button {
+                    display: flex;
+                    color: $grey;
+                    align-items: center;
+                    justify-content: center;
+                    font-size: 0.75rem;
+                    cursor: pointer;
+                    background: none;
+                    border: none;
+                    gap: 0.25rem;
+                    svg {
+                      height: 16px;
+                      width: 16px;
+                    }
+                  }
+                }
+              }
             }
 
             pre {
@@ -114,7 +177,6 @@
             }
           }
         }
-      
         &.user {
           padding: 10px 20px;
           max-width: 70%;
@@ -122,7 +184,13 @@
           background-color: $mid-dark-grey;
           width: fit-content;
           margin-left: auto;
-          word-break: break-word;
+          white-space: pre-wrap;
+          @include breakpoints.sm {
+            max-width: 80%;
+          }
+          @include breakpoints.xs {
+            max-width: 90%;
+          }
         }
       }
     }
@@ -147,18 +215,18 @@
         color: $font-white;
       }
     }
-    .loading_response{
+    .loading_response {
       display: flex;
       padding: 18px 20px;
       gap: 1.25rem;
-      .logo{
+      .logo {
         margin-top: 0;
       }
-      .loader{
+      .loader {
         display: flex;
         align-items: center;
         width: 100%;
-        svg{
+        svg {
           height: 10px;
           width: 10px;
         }
@@ -166,6 +234,3 @@
     }
   }
 }
-
-
-
