--- a/client/src/assets/styles/pages/homepage.module.scss
+++ b/client/src/assets/styles/pages/homepage.module.scss
@@ -1,30 +1,36 @@
 @use "../variables.scss" as *;
 @use "../breakpoints.scss" as breakpoints;
 
-.homepage {
+.wrapper {
   display: flex;
   align-items: center;
+  justify-content: center;
+  height: 100%;
+  gap: 4rem;
+  @include breakpoints.xs {
+    flex-direction: column;
+  }
+}
+.homepage {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   gap: 3.125rem;
-  min-height: 85vh;
   font-size: 16px;
   user-select: none;
   padding: 0 46px;
-  padding-bottom: 96px;
+  height: 100%;
   @include breakpoints.md {
     padding: 0 36px;
-    padding-bottom: 96px;
   }
   @include breakpoints.sm {
     padding: 0 28px;
-    padding-bottom: 96px;
   }
   @include breakpoints.xs {
     padding: 0 20px;
-    padding-bottom: 96px;
   }
   @include breakpoints.xxs {
     padding: 0;
-    padding-bottom: 96px;
   }
   .left {
     flex: 1;
@@ -116,12 +122,10 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: fixed;
+    width: 100%;
     color: $white;
-    bottom: 15px;
     gap: 10px;
-    left: 50%;
-    transform: translateX(-50%);
+    margin: auto 0 25px 0;
     .logo {
       height: 40px;
       width: 40px;
@@ -191,7 +195,9 @@
 
 @include breakpoints.md {
   .homepage {
-    gap: 2rem;
+    .wrapper {
+      gap: 2rem;
+    }
     .left {
       gap: 0.5rem;
       h1 {
@@ -223,7 +229,9 @@
 }
 @include breakpoints.sm {
   .homepage {
-    gap: 1.4rem;
+    .wrapper {
+      gap: 1.4rem;
+    }
     .left {
       gap: 0.5rem;
       h1 {
@@ -253,12 +261,15 @@
     }
   }
 }
+
 @include breakpoints.xs {
   .homepage {
-    margin-top: 3rem;
-    gap: 4rem;
-    height: fit-content;
-    flex-direction: column;
+    .wrapper {
+      margin-top: 3rem;
+      gap: 4rem;
+      height: fit-content;
+      flex-direction: column;
+    }
     .left {
       gap: 0.5rem;
       flex: 0;
@@ -302,10 +313,12 @@
 }
 @include breakpoints.xxs {
   .homepage {
-    margin-top: 1rem;
-    gap: 2rem;
-    height: fit-content;
-    flex-direction: column;
+    .warpper {
+      margin-top: 1rem;
+      gap: 2rem;
+      height: fit-content;
+      flex-direction: column;
+    }
     .left {
       gap: 0.3rem;
       flex: 0;
