--- a/client/src/assets/styles/components/chatList.module.scss
+++ b/client/src/assets/styles/components/chatList.module.scss
@@ -2,19 +2,22 @@
 @use "../breakpoints.scss" as breakpoints;
 
 .wrapper.opened {
-  @include breakpoints.smm {
+  transition: background-color 0.2s;
+}
+
+@include breakpoints.smm {
+  .wrapper.opened {
     position: absolute;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.4);
     z-index: 11;
   }
-  transition: background 0.2s;
 }
 .chatList {
   display: flex;
   flex-direction: column;
-
+  overflow: hidden;
   width: 0;
   flex-shrink: 0;
   background-color: $dark-grey;
@@ -22,7 +25,7 @@
   padding-left: 0.75rem;
   padding-right: 0.25rem;
   user-select: none;
-  overflow: hidden;
+
   z-index: 15;
   &.opened {
     width: 260px;
@@ -73,16 +76,16 @@
     }
   }
   .middle_cont {
-    overflow-y: auto;
-    overflow-x: hidden;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
     padding-right: 0.5rem;
     .newChat {
-      overflow-x: hidden;
       display: flex;
       flex-shrink: 0;
+      a {
+        width: 100%;
+      }
       button {
         display: flex;
         align-items: center;
@@ -124,21 +127,45 @@
     .list {
       display: flex;
       flex-direction: column;
+      flex-shrink: 1;
+      .ChatList_component_main_wrapper {
+        position: relative;
+        display: flex;
+        height: 36px;
 
-      a {
-        color: $font-white;
-        flex-wrap: nowrap;
-        white-space: nowrap;
-        overflow: hidden;
-        div {
+        a {
+          color: $font-white;
+          flex-wrap: nowrap;
+          white-space: nowrap;
           width: 100%;
-
+          position: relative;
+          .custom_hover {
+            overflow-y: hidden;
+            display: inherit;
+            gap: inherit;
+            align-items: inherit;
+            justify-content: inherit;
+            flex-wrap: inherit;
+            white-space: inherit;
+            padding: 6px;
+            border-radius: 0.5rem;
+            background-color: transfparent;
+            overflow-x: hidden;
+            transition: background 100ms;
+            flex-shrink: 0;
+            width: 100%;
+            &:hover {
+              background-color: #212121;
+            }
+          }
           span {
             position: relative;
-            width: 100%;
-            flex: 1;
             display: flex;
-            overflow-x: hidden;
+            overflow: hidden;
+
+            height: 24px;
+            border: 2px solid transparent;
+            
             .three_dots {
               width: fit-content;
               position: absolute;
@@ -152,12 +179,16 @@
               justify-content: end;
               color: $font-white;
               width: 42px;
+              background: transparent;
+              border: none;
               background-image: linear-gradient(
                 to left,
                 $dark-grey 15%,
                 rgba(0, 0, 0, 0) 100%
               );
+              cursor: pointer;
               transition: all 100ms;
+            
               svg {
                 display: none;
                 height: 18px;
@@ -165,7 +196,38 @@
               }
             }
           }
+          .edit_input {
+            height: 24px;
+            width: 100%;
+            background: none;
+            color: $font-white;
+            border: none;
+            border: 2px solid #4b72bf;
+            outline: none;
+            font-size: 16px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont,
+              "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans",
+              "Helvetica Neue", sans-serif;
+          }
+          .option_opened {
+            background-color: #212121;
+            .three_dots {
+              background-image: linear-gradient(
+                to left,
+                #212121 60%,
+                rgba(0, 0, 0, 0) 100%
+              );
+              svg {
+                color: $grey;
+                display: block;
+                &:hover {
+                  color: $font-white;
+                }
+              }
+            }
+          }
         }
+
         &:hover .three_dots {
           background-image: linear-gradient(
             to left,
@@ -177,6 +239,46 @@
             display: block;
             &:hover {
               color: $font-white;
+            }
+          }
+        }
+        .option_wrapper {
+          position: absolute;
+          right: -10px;
+          top: 33px;
+          cursor: default;
+          min-width: max-content;
+          z-index: 50;
+          background-color: $mid-dark-grey;
+          border-radius: 1rem;
+          border: solid 1px #ffffff1a;
+          padding: 8px;
+
+          .option_cont {
+            display: flex;
+            flex-direction: column;
+            button {
+              display: flex;
+              align-items: center;
+              gap: 10px;
+              padding: 12px;
+              display: flex;
+              cursor: pointer;
+              border-radius: 0.375rem;
+              background: none;
+              color: $font-white;
+              border: none;
+              transition: background 0.15s;
+              svg {
+                height: 20px;
+                width: 20px;
+              }
+              &:hover {
+                background-color: rgba(245, 245, 245, 0.1);
+              }
+              &:last-child {
+                color: #f93a37;
+              }
             }
           }
         }
